client/src/pages/Bid/Bid.scss
.bid {
  margin-top: 90px;
  padding: 20px 40px;
  display: flex;

  .bid-left {
    width: 65%;

    .bid-info-container {
      background-color: white;
      border-radius: 30px;
      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
      padding: 20px;
      margin-bottom: 30px;

      .client-profile {
        display: flex;

        .user-img {
          width: 70px;
          height: 70px;

          img {
            width: 70px;
            height: 70px;
            border-radius: 50%;
            cursor: pointer;
          }
        }

        .profileandusername {
          display: flex;
          flex-direction: column;
          margin-left: 20px;

          .profile-username {
            font-size: 1.2rem;
            text-transform: uppercase;
            color: #4ea685;

            .username2:hover {
              color: #4ea685;
              text-decoration: underline #4ea685;
            }
          }

          .btn {
            // margin-top: 20px;
            margin-bottom: 10px;
            background: linear-gradient(90deg, #755bea, #ff72c0);
            padding: 10px 20px;
            border-radius: var(--border-radius-big);
            color: white;
            width: max-content;
            height: max-content;
            margin-left: 20px;
            cursor: pointer;

            &:hover {
              background: linear-gradient(90deg, #634fbb, #d863a3);
            }
          }

          .title {
            margin-top: auto;
            // margin-bottom: auto;
            // margin-left: 30px;
            font-size: 30px;
            font-weight: 800;
            text-transform: uppercase;
          }
        }
      }

      .desc {
        margin: 20px 0px;
        overflow: auto;

        &::-webkit-scrollbar {
          height: 5px;
        }

        &::-webkit-scrollbar-thumb {
          background: rgb(124, 185, 197);
          border-radius: 50px;
        }

        &::-webkit-scrollbar-track {
          background: rgb(233, 231, 231);
          border-radius: 50px;
        }
      }

      .skills {
        margin-top: 20px;
        display: flex;
        flex-wrap: wrap;

        .skill {
          cursor: pointer;
          font-size: 14px;
          margin-right: 20px;
          line-height: 30px;
          width: max-content;
          margin-bottom: 5px;
          padding: 5px 10px;
          border-radius: 15px;
          color: white;
          background: var(--primary-color);
        }
      }

      .form {
        margin-top: 20px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;

        textarea {
          width: 450px;
          height: 200px;
          padding: 10px 20px;
          font-size: 16px;
          background: white;
          border: 1px solid black;
          box-shadow: var(--box-shadow);
          border-radius: 16px;
          resize: vertical;
        }

        .price {
          input {
            padding: 10px 20px;
            font-size: 16px;
            background: white;
            border: 1px solid black;
            box-shadow: var(--box-shadow);
            border-radius: 60px;
            width: 300px;
            margin-bottom: 20px;

            &:focus {
              border: 1px solid var(--main-color);
            }
          }
        }

        .btn {
          margin-top: 20px;
          margin-bottom: 10px;
          background: linear-gradient(90deg, #755bea, #ff72c0);
          padding: 10px 20px;
          border-radius: var(--border-radius-big);
          color: white;
          width: max-content;
          height: max-content;
          margin-left: 20px;
          cursor: pointer;

          &:hover {
            background: linear-gradient(90deg, #634fbb, #d863a3);
          }
        }
      }
    }

    .comments-container {
      background-color: white;
      border-radius: 30px;
      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
      padding: 20px;

      .title {
        font-size: 25px;
        font-weight: 600;
        margin-bottom: 30px;
      }

      .form {
        margin-top: 20px;
        margin-bottom: 20px;
        display: flex;

        img {
          width: 45px;
          height: 45px;
          border-radius: 50%;
          transform: translateY(-5px);
          cursor: pointer;
        }

        input {
          padding: 10px 20px;
          font-size: 16px;
          background: white;
          border: 1px solid black;
          box-shadow: var(--box-shadow);
          border-radius: 60px;
          width: 100%;
          margin-bottom: 20px;
          margin-left: 20px;

          &:focus {
            border: 1px solid var(--main-color);
          }
        }

        .btn {
          background: linear-gradient(90deg, #755bea, #ff72c0);
          padding: 10px 20px;
          border-radius: var(--border-radius-big);
          color: white;
          width: max-content;
          height: max-content;
          margin-left: 20px;
          cursor: pointer;

          &:hover {
            background: linear-gradient(90deg, #634fbb, #d863a3);
          }
        }
      }

      .comments {
        .comment {
          margin-bottom: 30px;

          .user-profile {
            display: flex;

            img {
              width: 45px;
              height: 45px;
              border-radius: 50%;
            }

            .info {
              margin-left: 20px;

              .user-name {
                font-size: 18px;
                font-weight: 500;
                margin-bottom: 5px;
              }

              // .comment-desc {
              // }
            }
          }
        }
      }
    }
  }

  .bid-right {
    width: 35%;

    .people-bid-info {
      background-color: white;
      border-radius: 30px;
      box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
      padding: 20px;
      margin-bottom: 30px;
      margin-left: 30px;

      img {
        width: 45px;
        height: 45px;
        border-radius: 50%;
      }

      .title {
        font-size: 20px;
        font-weight: 700;
      }

      .freelancers {
        overflow: auto;
        .flex {
          display: flex;
        }

        .freelancer {
          margin: 20px 0px;
          background-color: white;
          border-radius: 30px;
          box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
          padding: 20px;

          .user-info {
            display: flex;
            margin-bottom: 5px;
            width: calc(100% - 40px);
            margin: auto;

            .profile-username {
              margin-top: auto;
              margin-bottom: auto;
              margin-left: 10px;
              font-weight: 500;
              font-size: 18px;
              width: calc(100% - 40px);
              overflow-wrap: break-word;
            }

            .user-name {
              margin-top: auto;
              margin-bottom: auto;
              margin-left: 10px;
              font-weight: 500;
              font-size: 18px;
            }
          }

          .btn-center {
            width: max-content;
            margin: auto;
          }

          .desc {
            margin-top: 5px;
            text-align: center;
            // background: rgb(244, 240, 240);
            border: 1px solid rgb(216, 212, 212);
            padding: 20px;
            border-radius: 10px;
            overflow-x: auto;

            &::-webkit-scrollbar {
              height: 5px;
            }

            &::-webkit-scrollbar-thumb {
              background: rgb(124, 185, 197);
              border-radius: 50px;
            }

            &::-webkit-scrollbar-track {
              background: rgb(233, 231, 231);
              border-radius: 50px;
            }
          }

          .price,
          .star {
            cursor: pointer;
            font-size: 14px;
            margin-right: 20px;
            line-height: 30px;
            width: max-content;
            padding: 5px 10px;
            border-radius: 20px;
            margin: 10px 0px;
            color: white;
            background: var(--primary-color);
            margin-right: 10px;
          }
        }
        &::-webkit-scrollbar {
          width: 7px;
        }

        &::-webkit-scrollbar-thumb {
          background: rgb(124, 185, 197);
          border-radius: 50px;
        }

        &::-webkit-scrollbar-track {
          background: rgb(233, 231, 231);
          border-radius: 50px;
        }
      }
    }
  }
}

.profile-username {
  margin-top: auto;
  margin-bottom: auto;
  // margin-left: 10px;
  font-weight: 500;
  font-size: 18px;
  font-size: 1.2rem;
  text-transform: uppercase;
  color: #4ea685;

  .username2:hover {
    color: #4ea685;
    text-decoration: underline #4ea685;
  }
}

@media screen and (max-width: 1100px) {
  // display: flex;
  .bid {
    flex-direction: column;
    align-items: center;
    justify-content: center;

    .bid-left {
      width: 100%;
      margin: 0;
    }

    .bid-right {
      margin-top: 30px;
      width: 100%;

      // margin-left: 0;
      .people-bid-info {
        margin: 0;
      }
    }
  }
}

